2006-01-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-main.c: 
	Fix crash on opening 2nd instance, #328517

2006-01-24  Brent Smith  <gnome@nextreality.net>

	* src/yelp-window.c: (window_dispose), (window_disconnect):
	fixed a critical warning which is triggered when a document
	open fails, and then the user quits yelp

2006-01-23  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	Set initial focus to html widget, fixes #324190

	* src/yelp-search-pager.c: 
	* configure.in: 
	Make compilation with Beagle search with newer Beagle
	Bump minimum Beagle version to 0.2.0
	
2006-01-22  Brent Smith  <gnome@nextreality.net>

	* src/yelp-gecko-utils.cpp:
	* src/yelp-settings.c: (yelp_settings_get_font):
	Added more robust error handling for gconf related
	issues, fixes #327826

2006-01-22  Brent Smith  <gnome@nextreality.net>

	* yelp.desktop.in.in:
	Add "GTK" to the categories in the .desktop file; fixes
	#328045

2006-01-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-io-channel.c: 
	* src/yelp-info-parser.c: 
	Look for multi-part info files in INFOPATH
	Make loading from non-compressed {info,man} files work
	
	* src/yelp-toc-pager.c:
	Change g_str_concat to g_strdup_printf in translated string
	Fixes #327953

2006-01-20  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c: 
	Fix crashes on malformed info:dir files

2006-01-19  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/Makefile.am: 
	* configure.in: 
	Patch from Glynn Foster to fix more compilation 
	issues on Solaris
	
==================== 2.13.3 ====================

2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.13.3

2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/toc2html.xsl: 
	* src/yelp-toc-pager.c: 
	Make TOC pages XHML stric compliant
	
2006-01-17  Don Scorgie  <dscorgie@cvs.gnome.org>

	* configure.in: 
	Add appropriate CFLAGS when using Beagle search

2006-01-16  Brent Smith  <gnome@nextreality.net>
